@@ -3,6 +3,15 @@ software-store (0.1.3) karmic; urgency=low
   * deal with apps that require adding repositories (like
     the stuff from the partner repository)
   * exit when the main window is closed
+  * debian/postrm:
+    - fix bug on purge (LP: #420042)
+  * softwarestore/app.py, data/ui/SoftwareStore.ui:
+    - add launchpad integration help (if available)
+  * softwarestore/view/viewswitcher.py:
+    - reconnect to the daemon if it dies (e.g. because of
+      inactivity) LP: #420124
+  * softwarestore/view/appdetailsview.py:
+    - show number of installed dependencies in the description
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 27 Aug 2009 17:40:09 +0200
 
